removed some boilerplate's code

--- a/package.json
+++ b/package.json
@@ -1,15 +1,6 @@
 {
-  "name": "floa-lite",
+  "name": "runable-editor",
   "version": "0.1.0",
-  "description": "The all-in-one AI Agent Chat Platform for all screens. Switch between AI providers, upload files with RAG, connect tools via MCP, and create AI personas.",
-  "keywords": [
-    "ai chat",
-    "ai agent",
-    "all-in-one ai platform",
-    "ai for individuals",
-    "nextjs",
-    "typescript"
-  ],
   "license": "GPL-3.0",
   "author": {
     "name": "Prasanjit Dutta",
@@ -17,12 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/byjit/floa-lite.git"
+    "url": "https://github.com/prasanjit101/runable-editor.git"
   },
   "bugs": {
-    "url": "https://github.com/byjit/floa-lite/issues"
+    "url": "https://github.com/prasanjit101/runable-editor/issues"
   },
-  "homepage": "https://github.com/byjit/floa-lite#readme",
+  "homepage": "https://github.com/prasanjit101/runable-editor#readme",
   "type": "module",
   "scripts": {
     "prebuild": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
